# dotfiles

./: .dockerignore  .flake8  .gitattributes  .gitignore  CLAUDE.md  Dockerfile-bitwarden_backup  Pipfile  README.md  conftest.py  deploy_manifest.yaml  hosts.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
ansible_playbooks/: collect_crontabs.yml  install_all_apps.yml  install_all_apps_personal.yml  install_google_drive_ocamlfuse.yml  install_linux_apps.yml  install_linux_apps_personal.yml  install_mac_apps.yml  install_mac_apps_personal.yml  install_openvpn_client.yml  install_vscode.yml  install_windows_apps.yml  install_windows_apps_personal.yml  ping_all_hosts.yml  ping_all_hosts_personal.yml  pip_modules.yml
app_lists/: Brewfile  android_termux_apps.txt  linux_apps.txt  linux_apps_non_apt.md  linux_apps_personal.txt  linux_apps_wsl.txt  mac_apps.txt  mac_apps_cask.txt  mac_apps_personal_cask.txt  msys2_packages.txt  windows_apps.txt  windows_apps_aws.txt  windows_apps_base.txt  windows_apps_base_choco.txt  windows_apps_personal.txt  windows_apps_personal_choco.txt  windows_apps_personal_winget.txt
design/: SKILL.md  STYLE.md  tokens.css
docs/: android_termux.md  ansible_adhoc_commands.md  ansible_playbooks.md  ansible_server_setup.md  argon_case.md  client_credentials_repos.md  deploy_configs.md  docker_container_registry_local.md  file_syncing.md  finding_files.md  finding_strings_vscode.md  formatting_and_auto_formatting.md  github-cli.md  homelab_deployments.md  libreoffice.md  mkdocs.md  msys2.md  neovim.md  ollama.md  powershell.md  repo_improvement_tasks.md  repo_philosophy.md  rsync.md  searching_replacing.md  setup_claude_github_mcp.md  setup_docker.md  setup_git.md  setup_git_portable.md  setup_go.md  setup_kubernetes_K3S.md  setup_linux_workstation.md  setup_local_ai.md  setup_mac_workstation.md  setup_neovim.md  setup_neovim_portable.md  setup_pandoc.md  setup_power_bi.md  setup_python.md  setup_python_gmail_access.md  setup_python_portable.md  (+24 more)
integration_tests/: README.md  test_s3_tools.py
inventory/: hosts
pythonista/: show_ip_address.py
scripts/: app_jumping.ahk  apply_settings.ps1  apply_taskbar_layout.ps1  aws_credential_extractor.sh  aws_credential_extractor_kube.sh  aws_credential_extractor_s3.sh  aws_credential_extractor_s3_mac.sh  clasp_puller.sh  config_scripts.py  create_sym_links_startup.ps1  crontab_extractor.sh  deploy_ahk_startup_shortcuts.ps1  desktop_numbers.ahk  generate_mkdocs_stubs.py  get_my_private_ip.sh  get_my_public_ip.sh  install_android_termux_apps.sh  install_apps_interactive.sh  install_linux_apps.sh  install_linux_apps_personal.sh  install_linux_apps_wsl.sh  install_mac_apps.sh  install_mac_apps_personal.sh  install_uv_vs_code.ps1  install_windows_apps.ps1  install_windows_apps_personal.ps1  install_windows_apps_with_chocolatey.ps1  key_remaps.ahk  mac_cleanup_all.py  mac_cleanup_powerlog.py  mac_cleanup_purge_paths.py  mac_cleanup_vscode_extensions.py  my_updater.sh  npm_update.sh  (+15 more)
(+123 files in other folders)
