[project]
name = "dotfiles"
version = "0.1.0"
description = "dotfiles"
requires-python = ">=3.10,<3.11"
dependencies = [
    "flake8>=7.0.0",
    "isort>=5.0.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "pandas>=2.2.3",
    "paramiko>=3.5.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scp>=0.15.0",
    "speedtest-cli>=2.1.3",
    "tabulate>=0.9.0",
    "textual>=1.0.0",
    "types-paramiko>=4.0.0.20250822",
    "pyyaml>=6.0.2",
    "readable-utils[postgres]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 120
max-complexity = 15
extend-ignore = ["E203", "W503"]
extend-exclude = [".venv"]

[tool.isort]
profile = "black"
lines_between_types = 0
lines_between_sections = 1
sort_relative_in_force_sorted_sections = false
known_third_party = ["brand_tools", "budgets", "breakout_gcr_pl_mapping", "breakout_schemas", "config", "config_utils", "config_tests", "config_data_quality_validation", "concur_schemas", "ap_vendor_split_hc_us"]
sections= ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["dotenv", "test_tools"]
no_lines_before = ["FIRSTPARTY"]
force_sort_within_sections = false

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true

[tool.uv.sources]
readable-utils = { git = "https://github.com/ReadableCode/readable_utils.git", tag = "v0.2.1" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
